# autonomous_driving_ros

./: .gitattributes  .gitignore  CMakeLists.txt  READ.md  frames.gv  package.xml  recorded_path.csv  waypoints.csv
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.fish  local_setup.sh  setup.fish  setup.sh
devel/lib/perception/: static_tf_broadcaster_node  tf_broadcaster_node
devel/lib/pkgconfig/: dummy_controller.pc  perception.pc  simulation.pc
devel/lib/simulation/: JSON_param_reader  ROS_command_transmitter  unity_TCP_stream_receiver
devel/share/dummy_controller/cmake/: dummy_controllerConfig.cmake
devel/share/perception/cmake/: perceptionConfig.cmake
devel/share/roseus/ros/simulation/: manifest.l
devel/share/simulation/cmake/: simulation-msg-extras.cmake  simulation-msg-paths.cmake  simulationConfig.cmake
src/: README.md  path.cpp  path_publisher_node.cpp  path_publisher_node_fixed.cpp  path_recorder.cpp  recordpoints.cpp  show_waypoints_node.cpp  show_waypoints_node_fixed.cpp  showpath.cpp  waypoint_logger_node.cpp  waypoint_logger_node_fixed.cpp
src/dummy_controller/: CMakeLists.txt  package.xml
src/dummy_controller/src/: dummy_controller_node.cpp
src/path_recorder/: CMakeLists.txt  READ.md  my_map.yaml
src/path_recorder/include/: path_recorder.hpp
src/path_recorder/src/: csv_goal_publisher.cpp  path_recorder.cpp  recordpoints.cpp  showpath.cpp  showpoints.cpp
src/perception/: CMakeLists.txt  README_perception.md  README_perception_chinese.md  README_perception_english.md  package.xml
src/perception/launch/: map_nagivation.launch  nav.launch  octomap.launch  perception.launch
src/perception/src/: save_octomap_subscriber.cpp  static_tf_broadcaster_node.cpp
src/simulation/: CMakeLists.txt
src/simulation/src/: true_state_parser.h
src/traffic_light_detector/: CMakeLists.txt  README.md  package.xml
src/traffic_light_detector/Backup_nodes/01_use_of_semantic_to_bounding_box/: segmentation_processor_node.cpp
src/traffic_light_detector/Backup_nodes/03_hsv_filter_and_cutting_image/: color_detector_node.cpp
src/traffic_light_detector/Backup_nodes/04_bounding_boxes_semantic_images/: data_fusion.cpp
src/traffic_light_detector/Backup_nodes/05_Segmentation-Depth_image/: data_fusion.cpp
src/traffic_light_detector/launch/: detection_pipeline.launch
src/traffic_light_detector/msg/: TrafficLightBBox.msg  TrafficLightBBoxArray.msg  TrafficLightColor.msg
src/traffic_light_detector/src/: color_detector_node.cpp  semantic_depth_median_node.cpp  traffic_light_detection.cpp
src/traffic_light_hsv_detector/: CMakeLists.txt  README.md  Read.me
src/traffic_light_hsv_detector/Backup_nodes/00_pure_hsv_filter/: color_detector.cpp
src/traffic_light_hsv_detector/Backup_nodes/01_use_of_semantic_to_bounding_box/: color_detector_node.cpp
src/traffic_light_hsv_detector/launch/: detection_pipeline.launch
src/traffic_light_hsv_detector/msg/: BoundingBoxes.msg  TrafficLight.msg  TrafficLightArray.msg
src/traffic_light_hsv_detector/src/: color_detector_node.cpp  semantic_depth_median_node.cpp  traffic_light_detection.cpp
src/trajectoryplanning/: CMakeLists.txt  package.xml
src/trajectoryplanning/config/: base_costmap_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/trajectoryplanning/include/: a_star.h
src/trajectoryplanning/launch/: move_base.launch  nav.launch  path_planner.launch
src/trajectoryplanning/src/: a_star.cpp  a_star_path_planner.cpp  multi_goals_sender.cpp
traffic_light_hsv_detector/: CMakeLists.txt  package.xml
traffic_light_hsv_detector/launch/: detect_traffic_lights.launch
traffic_light_hsv_detector/msg/: BoundingBox.msg
