<package format="2">
  <name>path_recorder</name>
  <version>0.0.0</version>
  <description>The path_recorder package</description>

  <maintainer email="your-email@example.com">Your Name</maintainer>

  <license>TODO</license>

  <!-- 需要将 catkin 包作为构建工具依赖项 -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- 其他依赖项 -->
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
</package>

