<?xml version="1.0"?>
<package format="2">
  <name>traffic_light_hsv_detector</name>
  <version>0.0.1</version>
  <description>
    Segmentation- und HSV-basierte Ampel- und Fahrzeugdetektion für Unity-ROS.
  </description>

  <maintainer email="you@example.com">Dein Name</maintainer>
  <license>BSD</license>

  <!-- Build- und Laufzeit-Abhängigkeiten -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- OpenCV ist externe Lib, kein ROS-Package -->
  <export>
  </export>
</package>

 
